# agentloom

./: .dockerignore  .gitignore  404.html  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml  labels.json  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-tag.yml  ci.yml  docker.yml  docs.yml  e2e-ollama.yml  labels.yml  pr-labeler.yml  release.yml  stale.yml
architecture/: index.html
changelog/: index.html
contributing/: index.html
deploy/: DASHBOARD.md  INFRASTRUCTURE.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
deploy/argocd/: application.yaml
deploy/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
deployment/: index.html
docs/: architecture.md  changelog.md  contributing.md  deployment.md  examples.md  graph-api.md  index.md  observability.md  providers.md  python-dsl.md  testing-and-replay.md  workflow-yaml.md
examples/: 01_simple_qa.yaml  02_chain_of_thought.yaml  03_router_workflow.yaml  04_tool_augmented.yaml  05_content_moderation.yaml  06_lead_qualification.yaml  07_incident_triage.yaml  08_contract_analysis.yaml  09_fraud_detection.yaml  10_content_localization.yaml  11_insurance_claims.yaml  12_log_analysis.yaml  13_report_generator.yaml  14_custom_tools_decorator.py  14_custom_tools_decorator.yaml  15_custom_tools_subclass.py  15_custom_tools_subclass.yaml  16_circuit_breaker_demo.yaml  17_sandbox_allowed.yaml  18_sandbox_blocked.yaml  19_multimodal_vision.yaml  20_multimodal_base64.yaml  21_multimodal_url_passthrough.yaml  22_multimodal_sandbox.yaml  23_multimodal_pdf.yaml  24_multimodal_audio.yaml  25_streaming_qa.yaml  26_streaming_multimodal.yaml  27_array_index.yaml  28_checkpoint_resume.yaml  29_approval_gate.yaml  30_approval_gate_webhook.yaml  31_record_and_replay.yaml  32_yaml_mock.yaml  35_tool_calling.yaml  README.md  index.html
graph-api/: index.html
observability/: index.html
providers/: index.html
python-dsl/: index.html
recordings/: tool_calling.json
scripts/: audit_approval_gate.py  audit_infra.py  audit_integration.py  check_version_linearity.py  observability-setup.sh  ollama-serve-lan.sh  ollama-setup.sh  validate_approval_gate.py  validate_mock_provider.py  validate_pause_resume.py  validate_webhook.py
search/: search_index.json
src/agentloom/: __init__.py  compat.py  config.py  exceptions.py
stylesheets/: extra.css
testing-and-replay/: index.html
tests/: conftest.py  test_compat.py  test_config.py
tests/checkpointing/: test_file_checkpointer.py
tests/cli/: test_callback_server.py  test_history.py  test_info.py  test_replay.py  test_resume.py  test_run.py  test_runs.py  test_validate.py  test_visualize.py
tests/core/: test_dag.py  test_dsl.py  test_engine.py  test_engine_approval.py  test_engine_checkpoint.py  test_engine_integration.py  test_engine_pause.py  test_graph.py  test_parser.py  test_protocols.py  test_redact.py  test_results.py  test_state.py  test_templates.py
tests/e2e/: conftest.py  test_checkpoint_e2e.py  test_cli_array_index.py  test_docker_array_index.py  test_ollama.py
tests/history/: test_writer.py
tests/observability/: test_cost_tracker.py  test_logging.py  test_metrics.py  test_noop.py  test_observer.py  test_quality.py  test_schema.py  test_tracing.py
tests/providers/: test_anthropic.py  test_gateway.py  test_google.py  test_http.py  test_mock.py  test_multimodal.py  (+5 more)
workflow-yaml/: index.html
(+142 files in other folders)
